objects/vlocity_cmt__RelationshipGraphTraversal__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CommentField__c</fullName>
        <description>Comment field from the intersection object.</description>
        <label>Comment Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultStrengthValue__c</fullName>
        <label>Default Strength Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateField__c</fullName>
        <label>End Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldList__c</fullName>
        <description>Field List in the intersection object to be queried.</description>
        <label>Field List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>Data pack support</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GraphId__c</fullName>
        <label>Relationship Graph</label>
        <referenceTo>vlocity_cmt__RelationshipGraph__c</referenceTo>
        <relationshipLabel>Relationship Graph Traversals</relationshipLabel>
        <relationshipName>RelationshipGraphTraversals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InfluenceScoreField__c</fullName>
        <description>InfluenceScoreField field from the intersection object</description>
        <label>Influence Score Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipObject__c</fullName>
        <label>Relationship Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipTypeField__c</fullName>
        <label>Relationship Type Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipTypeValue__c</fullName>
        <label>Relationship Type Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RoleField__c</fullName>
        <description>Relationship role field defined in the intersection object</description>
        <label>Role Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceLabelField__c</fullName>
        <description>Source Label Field defined in the intersection object</description>
        <label>Source Label Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceLabel__c</fullName>
        <label>Source Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceObjectApiName__c</fullName>
        <label>Source Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceObjectField__c</fullName>
        <label>Source Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateField__c</fullName>
        <label>Start Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StrengthField__c</fullName>
        <label>Strength Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetLabelField__c</fullName>
        <description>Target Label Field defined in the intersection object</description>
        <label>Target Label Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetLabel__c</fullName>
        <label>Target Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetObjectApiName__c</fullName>
        <label>Target Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetObjectField__c</fullName>
        <label>Target Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Graph Traversal</label>
    <nameField>
        <label>Relationship Graph Traversal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Graph Traversals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>